// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`0D-MappedNewCapsule fetchCapsuleRelations 1`] = `
{
  "capsuleInfo": {
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule": {},
  },
  "extends": {},
  "found":   
Set {
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
  }
,
  "mappings": {
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule": [
      {
        "delegate": "#@stream44.studio/encapsulate/structs/Capsule",
        "propName": "#@stream44.studio/encapsulate/structs/Capsule",
        "target": "@stream44.studio/encapsulate/structs/Capsule",
      },
    ],
  },
  "properties": {
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule": [
      {
        "pcOptions": null,
        "propName": "alias",
        "propertyContract": "#",
        "propertyContractDelegate": "",
        "propertyContractUri": "",
        "propertyType": "CapsulePropertyTypes.String",
        "valueExpression": "'mapped-with-options'",
      },
      {
        "pcOptions": null,
        "propName": "storageApi",
        "propertyContract": "#",
        "propertyContractDelegate": "",
        "propertyContractUri": "",
        "propertyType": "CapsulePropertyTypes.Mapping",
        "valueExpression": "'./caps/Storage'",
      },
      {
        "pcOptions": null,
        "propName": "#@stream44.studio/encapsulate/structs/Capsule",
        "propertyContract": "#",
        "propertyContractDelegate": "#@stream44.studio/encapsulate/structs/Capsule",
        "propertyContractUri": "",
        "propertyType": "CapsulePropertyTypes.Mapping",
        "valueExpression": ""@stream44.studio/encapsulate/structs/Capsule"",
      },
    ],
  },
}
`;

exports[`0D-MappedNewCapsule fetchInstanceRelations 1`] = `
{
  "capsuleInfo": {
    "@stream44.studio/encapsulate/structs/Capsule:18": {
      "capsuleName": "@stream44.studio/encapsulate/structs/Capsule",
      "capsuleSourceUriLineRef": "@stream44.studio/encapsulate/structs/Capsule:18",
    },
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule:28": {
      "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule:28",
    },
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/Storage:33": {
      "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/Storage",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/Storage:33",
    },
  },
  "instances": {
    "@stream44.studio/encapsulate/structs/Capsule:18": {
      "capsuleName": "@stream44.studio/encapsulate/structs/Capsule",
      "capsuleSourceUriLineRef": "@stream44.studio/encapsulate/structs/Capsule:18",
      "instanceId": "f9f74bee2970efdd86c1b71299c914f2e7c430eb46d2dcc3176f87df9f842b63",
    },
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule:28": {
      "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule:28",
      "instanceId": "277506172bcfd8218b305caf9f8559089bedc0133015e0c66db2189cebce09c0",
    },
    "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/Storage:33": {
      "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/Storage",
      "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/Storage:33",
      "instanceId": "96799a3c76bdae13aec376a11a92edb8b89a04002f2480378a0117912e34b26d",
    },
  },
  "parentMap": {
    "96799a3c76bdae13aec376a11a92edb8b89a04002f2480378a0117912e34b26d": "277506172bcfd8218b305caf9f8559089bedc0133015e0c66db2189cebce09c0",
    "f9f74bee2970efdd86c1b71299c914f2e7c430eb46d2dcc3176f87df9f842b63": "277506172bcfd8218b305caf9f8559089bedc0133015e0c66db2189cebce09c0",
  },
}
`;

exports[`0D-MappedNewCapsule getCapsuleNamesBySpineTree 1`] = `
[
  "@stream44.studio/encapsulate/structs/Capsule",
  "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
  "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/Storage",
]
`;

exports[`0D-MappedNewCapsule getCapsuleSpineTree_data 1`] = `
[
  {
    "p": {
      "declarationLine": -1,
      "definitionEndLine": -1,
      "definitionStartLine": -1,
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::prop::#@stream44.studio/encapsulate/structs/Capsule",
      "mappedModuleUri": "@stream44.studio/encapsulate/structs/Capsule",
      "name": "#@stream44.studio/encapsulate/structs/Capsule",
      "propertyContractDelegate": "#@stream44.studio/encapsulate/structs/Capsule",
      "propertyContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#",
      "propertyType": "CapsulePropertyTypes.Mapping",
      "valueExpression": ""@stream44.studio/encapsulate/structs/Capsule"",
      "valueType": "string",
    },
    "pc": {
      "contractKey": "#",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#",
      "options": null,
      "propertyContractUri": "",
      "spineContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
    "s": {
      "contractUri": "@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
  },
  {
    "p": {
      "declarationLine": 11,
      "definitionEndLine": 14,
      "definitionStartLine": 11,
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::prop::alias",
      "mappedModuleUri": "",
      "name": "alias",
      "propertyContractDelegate": "",
      "propertyContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#",
      "propertyType": "CapsulePropertyTypes.String",
      "valueExpression": "'mapped-with-options'",
      "valueType": "string",
    },
    "pc": {
      "contractKey": "#",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#",
      "options": null,
      "propertyContractUri": "",
      "spineContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
    "s": {
      "contractUri": "@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
  },
  {
    "p": {
      "declarationLine": 15,
      "definitionEndLine": 23,
      "definitionStartLine": 15,
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::prop::storageApi",
      "mappedModuleUri": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/Storage",
      "name": "storageApi",
      "propertyContractDelegate": "",
      "propertyContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#",
      "propertyType": "CapsulePropertyTypes.Mapping",
      "valueExpression": "'./caps/Storage'",
      "valueType": "string",
    },
    "pc": {
      "contractKey": "#",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#",
      "options": null,
      "propertyContractUri": "",
      "spineContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
    "s": {
      "contractUri": "@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
  },
  {
    "p": null,
    "pc": {
      "contractKey": "#@stream44.studio/encapsulate/structs/Capsule",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::pc::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0::#@stream44.studio/encapsulate/structs/Capsule",
      "options": null,
      "propertyContractUri": "@stream44.studio/encapsulate/structs/Capsule",
      "spineContractId": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
    "s": {
      "contractUri": "@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
      "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::spine::@stream44.studio/encapsulate/spine-contracts/CapsuleSpineContract.v0",
    },
  },
]
`;

exports[`0D-MappedNewCapsule getCapsuleWithSource 1`] = `
{
  "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule:28": {
    "cacheBustVersion": 21,
    "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule:28",
    "cstFilepath": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/.~o/encapsulate.dev/static-analysis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28.csts.json",
    "spineInstanceTreeId": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
  },
  "source": {
    "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
    "declarationLine": 7,
    "definitionEndLine": 26,
    "definitionStartLine": 7,
    "extendsCapsule": "",
    "extendsCapsuleUri": "",
    "id": "<PACKAGE_ROOT>/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule.ts:28::source",
    "importStackLine": 28,
    "moduleUri": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
    "optionsEndLine": 30,
    "optionsStartLine": 26,
  },
}
`;

exports[`0D-MappedNewCapsule getChildInstances 1`] = `
[
  {
    "capsuleName": "@stream44.studio/encapsulate/structs/Capsule",
    "capsuleSourceUriLineRef": "@stream44.studio/encapsulate/structs/Capsule:18",
    "instanceId": "f9f74bee2970efdd86c1b71299c914f2e7c430eb46d2dcc3176f87df9f842b63",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/Storage",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/Storage:33",
    "instanceId": "96799a3c76bdae13aec376a11a92edb8b89a04002f2480378a0117912e34b26d",
  },
]
`;

exports[`0D-MappedNewCapsule getInstancesBySpineTree 1`] = `
[
  {
    "capsuleName": "@stream44.studio/encapsulate/structs/Capsule",
    "capsuleSourceUriLineRef": "@stream44.studio/encapsulate/structs/Capsule:18",
    "instanceId": "f9f74bee2970efdd86c1b71299c914f2e7c430eb46d2dcc3176f87df9f842b63",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule:28",
    "instanceId": "277506172bcfd8218b305caf9f8559089bedc0133015e0c66db2189cebce09c0",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/Storage",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/Storage:33",
    "instanceId": "96799a3c76bdae13aec376a11a92edb8b89a04002f2480378a0117912e34b26d",
  },
]
`;

exports[`0D-MappedNewCapsule getRootInstance 1`] = `
{
  "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
  "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule:28",
  "instanceId": "277506172bcfd8218b305caf9f8559089bedc0133015e0c66db2189cebce09c0",
}
`;

exports[`0D-MappedNewCapsule listCapsules 1`] = `
[
  {
    "capsuleName": "@stream44.studio/encapsulate/structs/Capsule",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/Storage",
  },
]
`;

exports[`0D-MappedNewCapsule listSpineInstanceTrees 1`] = `
[
  {
    "capsuleName": "@stream44.studio/encapsulate/structs/Capsule",
    "capsuleSourceUriLineRef": "@stream44.studio/encapsulate/structs/Capsule:18",
    "spineInstanceTreeId": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule:28",
    "spineInstanceTreeId": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
  },
  {
    "capsuleName": "@stream44.studio/FramespaceGenesis/models/Encapsulate/CapsuleSpine/examples/01-TreeRelationships/caps/Storage",
    "capsuleSourceUriLineRef": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/caps/Storage:33",
    "spineInstanceTreeId": "@stream44.studio/FramespaceGenesis/L4-space-models/Capsular/examples/02-TreeRelationships/0D-MappedNewCapsule",
  },
]
`;
